--- a/vpn/libreswan/plasmanetworkmanagement_libreswanui.desktop
+++ b/vpn/libreswan/plasmanetworkmanagement_libreswanui.desktop
@@ -2,56 +2,56 @@
 Type=Service
 Icon=
 ServiceTypes=PlasmaNetworkManagement/VpnUiPlugin
-X-KDE-Library=plasmanetworkmanagement_openswanui
-X-NetworkManager-Services=org.freedesktop.NetworkManager.openswan
+X-KDE-Library=plasmanetworkmanagement_libreswanui
+X-NetworkManager-Services=org.freedesktop.NetworkManager.libreswan
 X-KDE-PluginInfo-Author=Jan Grulich
 X-KDE-PluginInfo-Email=jgrulich@redhat.com
-X-KDE-PluginInfo-Name=plasmanetworkmanagement_openswanui
+X-KDE-PluginInfo-Name=plasmanetworkmanagement_libreswanui
 X-KDE-PluginInfo-Version=0.1
 X-KDE-PluginInfo-Website=
 X-KDE-PluginInfo-Category=VPNService
 X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-License=GPL
 X-KDE-PluginInfo-EnabledByDefault=false
-Name=IPsec based VPN (openswan)
-Name[ast]=VPN basada n'IPsec (openswan)
-Name[ca]=VPN basada en IPsec (openswan)
-Name[ca@valencia]=VPN basada en IPsec (openswan)
-Name[da]=IPsec-baseret VPN (openswan)
-Name[de]=VPN basierend auf IPsec (openswan)
-Name[el]=VPN βασισμένο σε IPsec (openswan)
-Name[en_GB]=IPsec based VPN (openswan)
-Name[es]=VPN basada en IPsec (openswan)
-Name[et]=IPseci põhine VPN (openswan)
-Name[eu]=IPsec oinarridun  VPN (openswan)
-Name[fi]=IPsec-pohjainen VPN (openswan)
-Name[fr]=VPN utilisant IPsec (openswan)
-Name[gl]=VPN baseada en IPsec (openswan)
-Name[hu]=IPsec-alapú VPN (openswan)
-Name[id]=VPN berbasis IPsec (openswan)
-Name[it]=VPN basata su IPsec (openswan)
-Name[ja]=IPsec ベースの VPN (openswan)
-Name[ko]=IPSec 기반 VPN(openswan)
-Name[lt]=IPsec pagrįstas VPN (openswan)
-Name[nl]=Op IPsec gebaseerde VPN (openswan)
-Name[nn]=IPsec-basert VPN (openswan)
-Name[pa]=IPsec ਅਧਾਰਿਤ VPN (openswan)
-Name[pl]=VPN oparty na IPsec (openswan)
-Name[pt]=VPN baseada em IPsec (openswan)
-Name[pt_BR]=VPN baseada em IPsec (openswan)
-Name[ru]=VPN на основе IPsec (openswan)
-Name[sk]=IPsec založené VPN (openswan)
-Name[sl]=Na IPsec temelječ VPN (openswan)
-Name[sr]=ВПН на основу ИПсека (Опенсвон)
-Name[sr@ijekavian]=ВПН на основу ИПсека (Опенсвон)
-Name[sr@ijekavianlatin]=VPN na osnovu IPseca (Openswan)
-Name[sr@latin]=VPN na osnovu IPseca (Openswan)
-Name[sv]=IPsec-baserad VPN (openswan)
-Name[tr]=IPsec tabanlı VPN (openswan)
-Name[uk]=VPN на основі IPsec (openswan)
-Name[x-test]=xxIPsec based VPN (openswan)xx
-Name[zh_CN]=基于 IPsec 的 VPN (openswan)
-Name[zh_TW]=以 IPsec 為底的 VPN (openswan)
+Name=IPsec based VPN (libreswan)
+Name[ast]=VPN basada n'IPsec (libreswan)
+Name[ca]=VPN basada en IPsec (libreswan)
+Name[ca@valencia]=VPN basada en IPsec (libreswan)
+Name[da]=IPsec-baseret VPN (libreswan)
+Name[de]=VPN basierend auf IPsec (libreswan)
+Name[el]=VPN βασισμένο σε IPsec (libreswan)
+Name[en_GB]=IPsec based VPN (libreswan)
+Name[es]=VPN basada en IPsec (libreswan)
+Name[et]=IPseci põhine VPN (libreswan)
+Name[eu]=IPsec oinarridun  VPN (libreswan)
+Name[fi]=IPsec-pohjainen VPN (libreswan)
+Name[fr]=VPN utilisant IPsec (libreswan)
+Name[gl]=VPN baseada en IPsec (libreswan)
+Name[hu]=IPsec-alapú VPN (libreswan)
+Name[id]=VPN berbasis IPsec (libreswan)
+Name[it]=VPN basata su IPsec (libreswan)
+Name[ja]=IPsec ベースの VPN (libreswan)
+Name[ko]=IPSec 기반 VPN(libreswan)
+Name[lt]=IPsec pagrįstas VPN (libreswan)
+Name[nl]=Op IPsec gebaseerde VPN (libreswan)
+Name[nn]=IPsec-basert VPN (libreswan)
+Name[pa]=IPsec ਅਧਾਰਿਤ VPN (libreswan)
+Name[pl]=VPN oparty na IPsec (libreswan)
+Name[pt]=VPN baseada em IPsec (libreswan)
+Name[pt_BR]=VPN baseada em IPsec (libreswan)
+Name[ru]=VPN на основе IPsec (libreswan)
+Name[sk]=IPsec založené VPN (libreswan)
+Name[sl]=Na IPsec temelječ VPN (libreswan)
+Name[sr]=ВПН на основу ИПсека (Либресвон)
+Name[sr@ijekavian]=ВПН на основу ИПсека (Либресвон)
+Name[sr@ijekavianlatin]=VPN na osnovu IPseca (Libreswan)
+Name[sr@latin]=VPN na osnovu IPseca (Libreswan)
+Name[sv]=IPsec-baserad VPN (libreswan)
+Name[tr]=IPsec tabanlı VPN (libreswan)
+Name[uk]=VPN на основі IPsec (libreswan)
+Name[x-test]=xxIPsec based VPN (libreswan)xx
+Name[zh_CN]=基于 IPsec 的 VPN (libreswan)
+Name[zh_TW]=以 IPsec 為底的 VPN (libreswan)
 Comment=IPsec, IKEv1, IKEv2 based VPN
 Comment[ast]=VPN basada n'IPsec, IKEv1 ya IKEv2
 Comment[ca]=VPN basada en IKEv1, IKEv2 sobre IPsec
